# shadoks-PACE2025

./: README.md
exact/: README.md  conflict.hpp  graph.hpp  hypergraph.hpp  local.hpp  maxsat.hpp  reduce.hpp
exact-src/: CMakeLists.txt  README.md  main.cpp  mip.hpp  tools.hpp
exact-src/lib/EvalMaxSAT/: CMakeLists.txt  CTestTestfile.cmake
exact-src/lib/MaLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
exact-src/lib/open-mcs/: Algorithm.cpp  (+3 more)
heuristic-src/: CMakeLists.txt  README.md  greedy.hpp  instance.hpp  local.hpp  main.cpp  maxsat.hpp  reduce.hpp
heuristic-src/lib/EvalMaxSAT/: CTestTestfile.cmake  Makefile  cmake_install.cmake
heuristic-src/lib/EvalMaxSAT/src/: EvalMaxSAT.h  ParseUtils.h  utile.h
heuristic-src/lib/MaLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
heuristic-src/lib/cadical/: CTestTestfile.cmake  Makefile  cmake_install.cmake
heuristic-src/lib/open-mcs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MaxSubgraphAlgorithm.cpp  cmake_install.cmake
heuristic-src/lib/scipoptsuite/gcg/src/: githash.c
heuristic-src/lib/scipoptsuite/soplex/src/soplex/: git_hash.cpp
heuristic-src/lib/scipoptsuite/ug/src/ug/: paraCommCPP11.cpp  paraCommMpi.cpp
heuristic-src/lib/scipoptsuite/ug/src/ug_scip/: scipParaParamSet.cpp
heuristic-src/lib/scipoptsuite/zimpl/src/zimpl/: mmlparse2.h  mmlscan.c
tt-open-wbo-inc/: README.md
tt-open-wbo-inc/code/: Encoder.or  Main.cc  Main.or  Makefile  MaxSAT.cc  MaxSAT.h  MaxSAT.or  MaxSATFormula.or  MaxSATFormulaExtended.or  MaxSAT_Partition.or  ParserPB.or  SATLike.or  Torc.or  depend.mk
(+72 files in other folders)
